syntax = "proto3";

package chat_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/api/annotations.proto";
import "validate/validate.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/Tel3scop/chat-server/pkg/chat_v1;chat_v1";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Chat API"
    version: "1.0.0"
    contact: {
      name: "Evgeniy Evstifeev"
      email: "evstifeevea@gmail.com"
    };
  };

  host: "localhost:8090",
  schemes: HTTP,
  schemes: HTTPS,
  consumes: "application/json",
  produces: "application/json",
};

service ChatV1 {
  rpc Create(CreateRequest) returns (CreateResponse){
    option (google.api.http) = {
      post: "/chat/v1"
      body: "*"
    };
  };
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty){
    option (google.api.http) = {
      delete: "/chat/v1/{id}"
    };
  };
  rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty){
    option (google.api.http) = {
      post: "/chat/v1/{chat_id}/send"
      body: "*"
    };
  };
}

message CreateRequest {
  repeated string usernames = 1;
  string name = 2;
}

message CreateResponse {
  int64 id = 1;
}

message DeleteRequest {
  int64 id = 1;
}

message SendMessageRequest {
  int64 chat_id = 1;
  string from = 2;
  string text = 3;
  google.protobuf.Timestamp timestamp = 4;
}